Add setTemplate function

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 </head>
 <body>
 
-<div class="container">
-    <div id="notifications-container">
+    <div id="messagesContainer">
     </div>
-</div>
 
 </body>
 </html>
